feat : 20260130 by functions

--- a/learning_logs/20260130.md
+++ b/learning_logs/20260130.md
@@ -8,3 +8,57 @@ git config user.name
 git config user.email
 
 다 하면 깃 허브 들어가서 파이썬 레포지 만들기
+
+# python 수업
+
+## hurdle # 1
+```python
+def turn_right():
+    turn_left()
+    turn_left()
+    turn_left()
+    
+def jump:
+    for i in range(6):
+        move()
+        turn_left()
+        move()
+        turn_right()
+        move()
+        turn_right()
+        move()
+        turn_left()
+jump()
+```
+
+## hurdle 
+```python
+def turn_right():
+    turn_left()
+    turn_left()
+    turn_left()
+
+while not at_goal():
+    if right_is_clear():
+       turn_right()
+       move()
+    elif front_is_clear():
+       move()
+    
+    else:
+       turn_left()
+```
+
+## right-hand maze solution
+```python
+while not at_goal():
+    if wall_on_right() and wall_in_front():
+        turn_left()
+    elif wall_on_right() and front_is_clear():
+        move()
+    elif right_is_clear():
+        turn_right()
+        move()
+```
+
+ch03_indexing -> main
